--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,4 +1,22 @@
 <h1> Hello pokemon </h1>
-<% @pokemons.each do |pokemon| %>
-
-<% end %>
+<ul>
+  <% @pokemons.each do |pokemon| %>
+    <li>
+      <p>icon: <img src="<%= pokemon.icon%>"> </p>
+      <p>first_type_image: <img src="<%= pokemon.first_type_image%>"> </p>
+      <p>second_type_image: <img src="<%= pokemon.second_type_image%>"> </p>
+      <p>national_dex_num: <%= pokemon.national_dex_num %> </p>
+      <p>name: <%= pokemon.name%> </p>
+      <p>first_type: <%= pokemon.first_type%> </p>
+      <p>second_type: <%= pokemon.second_type%> </p>
+      <p>abilities: <%= pokemon.abilities%> </p>
+      <p>hp: <%= pokemon.hp%> </p>
+      <p>atk: <%= pokemon.atk%> </p>
+      <p>defe: <%= pokemon.defe%> </p>
+      <p>spa: <%= pokemon.spa%> </p>
+      <p>spd: <%= pokemon.spd%> </p>
+      <p>spe: <%= pokemon.spe%> </p>
+      <p>url: <%= pokemon.url%> </p>
+    </li>
+  <% end %>
+  </ul>
