--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -6,12 +6,12 @@
       <p><img src="<%= pokemon.first_type_image%>"> <img src="<%= pokemon.second_type_image%>"> #<%= pokemon.national_dex_num %></p>
       <p><h3><%= pokemon.name%></h3> </p>
       <p><b> Abilities: </b> <%= pokemon.abilities%> </p>
-      <p> <b> HP: </b> <%= pokemon.hp%> </p> 
-      <b> Atk: </b> <%= pokemon.atk%> </p> 
-      <b> Def: </b> <%= pokemon.defe%> </p> 
-      <b> SpA: </b> <%= pokemon.spa%> </p> 
-      <b> SpD: </b> <%= pokemon.spd%> </p> 
-      <b> Spe: </b> <%= pokemon.spe%> </p>
+      <p> <b> HP: </b> <%= pokemon.hp.to_i%> </p> 
+      <b> Atk: </b> <%= pokemon.atk.to_i%> </p> 
+      <b> Def: </b> <%= pokemon.defe.to_i%> </p> 
+      <b> SpA: </b> <%= pokemon.spa.to_i%> </p> 
+      <b> SpD: </b> <%= pokemon.spd.to_i%> </p> 
+      <b> Spe: </b> <%= pokemon.spe.to_i%> </p>
     </li>
   <% end %>
   </ul>
