--- a/app/views/unique_pokemons/index.html.erb
+++ b/app/views/unique_pokemons/index.html.erb
@@ -1,1 +1,19 @@
-<h1> Hello, World <h1>
+<h1> Your Pokemon </h1>
+<ul>
+  <% @unique_pokemons.each do |unique_pokemon|%>
+    <li>
+      <p><a href="<%= unique_pokemon.pokemon.url%>"> <img src="<%= unique_pokemon.pokemon.icon%>"> </a> </p>
+      <p><img src="<%= unique_pokemon.pokemon.first_type_image%>"> <img src="<%= unique_pokemon.pokemon.second_type_image%>"> #<%= unique_pokemon.pokemon.national_dex_num %></p>
+      <p><h3><%= unique_pokemon.pokemon.name%></h3> </p>
+      <p><b> Abilities: </b> <%= unique_pokemon.pokemon.abilities%> </p>
+      <p> <b> HP: </b> <%= unique_pokemon.pokemon.hp.to_i%> </p> 
+      <b> Atk: </b> <%= unique_pokemon.pokemon.atk.to_i%> </p> 
+      <b> Def: </b> <%= unique_pokemon.pokemon.defe.to_i%> </p> 
+      <b> SpA: </b> <%= unique_pokemon.pokemon.spa.to_i%> </p> 
+      <b> SpD: </b> <%= unique_pokemon.pokemon.spd.to_i%> </p> 
+      <b> Spe: </b> <%= unique_pokemon.pokemon.spe.to_i%> </p>
+    </li>
+  <% end %>
+</ul>
+
+<%= link_to "New Unique Pokemon", new_unique_pokemon_path %>
