--- a/app/views/unique_pokemons/index.html.erb
+++ b/app/views/unique_pokemons/index.html.erb
@@ -4,7 +4,8 @@
     <li>
       <p><a href="<%= unique_pokemon.pokemon.url%>"> <img src="<%= unique_pokemon.pokemon.icon%>"> </a> </p>
       <p><img src="<%= unique_pokemon.pokemon.first_type_image%>"> <img src="<%= unique_pokemon.pokemon.second_type_image%>"> #<%= unique_pokemon.pokemon.national_dex_num %></p>
-      <p><h3><%= unique_pokemon.pokemon.name%></h3> </p>
+      <p><h3><%= link_to "#{unique_pokemon.pokemon.name}", unique_pokemon %></h3></p>
+      <p><b>Nickname: </b><%= unique_pokemon.nickname%></p>
       <p><b> Abilities: </b> <%= unique_pokemon.pokemon.abilities%> </p>
       <p> <b> HP: </b> <%= unique_pokemon.pokemon.hp.to_i%> </p> 
       <b> Atk: </b> <%= unique_pokemon.pokemon.atk.to_i%> </p> 
