--- a/app/views/unique_pokemons/show.html.erb
+++ b/app/views/unique_pokemons/show.html.erb
@@ -1,15 +1,22 @@
-<h1> New Unique Pokemon Created </h1>
-<ul>
-    <li>
-      <p><a href="<%= @unique_pokemon.pokemon.url%>"> <img src="<%= @unique_pokemon.pokemon.icon%>"> </a> </p>
-      <p><img src="<%= @unique_pokemon.pokemon.first_type_image%>"> <img src="<%= @unique_pokemon.pokemon.second_type_image%>"> #<%= @unique_pokemon.pokemon.national_dex_num %></p>
-      <p><h3><%= @unique_pokemon.pokemon.name%></h3> </p>
-      <p><b> Abilities: </b> <%= @unique_pokemon.pokemon.abilities%> </p>
-      <p> <b> HP: </b> <%= @unique_pokemon.pokemon.hp.to_i%> </p> 
-      <b> Atk: </b> <%= @unique_pokemon.pokemon.atk.to_i%> </p> 
-      <b> Def: </b> <%= @unique_pokemon.pokemon.defe.to_i%> </p> 
-      <b> SpA: </b> <%= @unique_pokemon.pokemon.spa.to_i%> </p> 
-      <b> SpD: </b> <%= @unique_pokemon.pokemon.spd.to_i%> </p> 
-      <b> Spe: </b> <%= @unique_pokemon.pokemon.spe.to_i%> </p>
-    </li>
-</ul>
+<% ownership = "" %>
+<% if @unique_pokemon.user_id == nil %>
+  <% ownership = "A wild" %>
+<%elsif @unique_pokemon.user_id == current_user.id %>
+  <% ownership = "Your" %>
+<% else %>
+  <% ownership = "#{@unique_pokemon.user.name}'s"%>
+<% end %>
+
+<h1> <%= ownership %> pokemon. </h1>
+<p></p>
+<p><a href="<%= @unique_pokemon.pokemon.url%>"> <img src="<%= @unique_pokemon.pokemon.icon%>"> </a> </p>
+<p><img src="<%= @unique_pokemon.pokemon.first_type_image%>"> <img src="<%= @unique_pokemon.pokemon.second_type_image%>"> #<%= @unique_pokemon.pokemon.national_dex_num %></p>
+<p><h3><%= @unique_pokemon.pokemon.name%></h3> </p>
+<p><h3><%= @unique_pokemon.nickname%></h3> </p>
+<p><b> Abilities: </b> <%= @unique_pokemon.pokemon.abilities%> </p>
+<p> <b> HP: </b> <%= @unique_pokemon.pokemon.hp.to_i%> </p> 
+<b> Atk: </b> <%= @unique_pokemon.pokemon.atk.to_i%> </p> 
+<b> Def: </b> <%= @unique_pokemon.pokemon.defe.to_i%> </p> 
+<b> SpA: </b> <%= @unique_pokemon.pokemon.spa.to_i%> </p> 
+<b> SpD: </b> <%= @unique_pokemon.pokemon.spd.to_i%> </p> 
+<b> Spe: </b> <%= @unique_pokemon.pokemon.spe.to_i%> </p>
