--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+  <body style="background-color: #f3f0da;">
+    <nav class="navbar navbar-expand-lg" style="background-color: #5fab96;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,8 +24,16 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <% if current_user %>
-            <li class="nav-item">
-              <a class="nav-link"> Hello <%= current_user.name %></a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                My Account
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
             </li>
           <% else %>  
             <li class="nav-item">
@@ -53,6 +61,9 @@
             </ul>
           </li>
           <% if current_user %>
+            <li class="nav-item">
+              <a class="nav-link disabled"> Logged in as <%= current_user.name %></a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="/logout">Logout</a>
             </li>
