--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,18 +1,32 @@
 
 <h1> Hello pokemon </h1>
+<% index = 0 %>
 <ul>
-  <% @pokemons.each do |pokemon| %>
-    <li>
-      <p><a href="<%= pokemon.url%>"> <img src="<%= pokemon.icon%>"> </a> </p>
-      <p><img src="<%= pokemon.first_type_image%>"> <img src="<%= pokemon.second_type_image%>"> #<%= pokemon.national_dex_num %></p>
-      <p><h3><%= pokemon.name%></h3> </p>
-      <p><b> Abilities: </b> <%= pokemon.abilities%> </p>
-      <p> <b> HP: </b> <%= pokemon.hp.to_i%> </p> 
-      <b> Atk: </b> <%= pokemon.atk.to_i%> </p> 
-      <b> Def: </b> <%= pokemon.defe.to_i%> </p> 
-      <b> SpA: </b> <%= pokemon.spa.to_i%> </p> 
-      <b> SpD: </b> <%= pokemon.spd.to_i%> </p> 
-      <b> Spe: </b> <%= pokemon.spe.to_i%> </p>
-    </li>
+  <% while index < @pokemons.length - 1%>
+    <%# @pokemons.each do |pokemon| %>
+      <div class="row">
+        <% triple = 0 %>
+        <% while triple < 3 && index < @pokemons.length - 1%>
+          <div class="col-sm-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title"><%= @pokemons[index].name%></h5>
+                <p class="card=text"><a href="<%= @pokemons[index].url%>"> <img src="<%= @pokemons[index].icon %>"> </a> </p>
+                <p class="card=text"><img src="<%= @pokemons[index].first_type_image%>"> <img src="<%= @pokemons[index].second_type_image%>"> #<%= @pokemons[index].national_dex_num %></p>
+                <p class="card=text"><b> Abilities: </b> <%= @pokemons[index].abilities%> </p>
+                <p class="card=text"> <b> HP: </b> <%= @pokemons[index].hp.to_i%> </p> 
+                <b> Atk: </b> <%= @pokemons[index].atk.to_i%> </p> 
+                <b> Def: </b> <%= @pokemons[index].defe.to_i%> </p> 
+                <b> SpA: </b> <%= @pokemons[index].spa.to_i%> </p> 
+                <b> SpD: </b> <%= @pokemons[index].spd.to_i%> </p> 
+                <b> Spe: </b> <%= @pokemons[index].spe.to_i%> </p>
+              </div>
+            </div>
+          </div>
+          <% triple += 1%>
+          <% index += 1%>  
+        <% end %>
+      </div>
+      <p></p>
   <% end %>
   </ul>
