formatted unique_pokemons show to display their ev, iv, and a bar to represent their stat. made stat represent its real value rather than its base value

--- a/app/views/unique_pokemons/index.html.erb
+++ b/app/views/unique_pokemons/index.html.erb
@@ -19,6 +19,7 @@
                 <b> SpA: </b> <%= @unique_pokemons[index].pokemon.spa.to_i%> </p> 
                 <b> SpD: </b> <%= @unique_pokemons[index].pokemon.spd.to_i%> </p> 
                 <b> Spe: </b> <%= @unique_pokemons[index].pokemon.spe.to_i%> </p>
+                 <%= link_to "Go to page", @unique_pokemons[index] %>
               </div>
             </div>
           </div>
