--- a/app/views/unique_pokemons/show.html.erb
+++ b/app/views/unique_pokemons/show.html.erb
@@ -1,22 +1,218 @@
-<% ownership = "" %>
-<% if @unique_pokemon.user_id == nil %>
-  <% ownership = "A wild" %>
-<%elsif @unique_pokemon.user_id == current_user.id %>
-  <% ownership = "Your" %>
-<% else %>
-  <% ownership = "#{@unique_pokemon.user.name}'s"%>
-<% end %>
+<head>
+    <title></title>
+    <style>
+        .hp_iv_bar {
+            display: inline;
+            width: <%= @unique_pokemon.hp_iv * 2%>px;
+            height: 10px;
+        }
+        .hp_base_bar {
+            display: inline;
+            width: <%= @unique_pokemon.pokemon.hp * 2%>px;
+            height: 10px;
+        }
+        .hp_ev_bar {
+            display: inline;
+            width: <%= (@unique_pokemon.hp_ev/4) * 2%>px;
+            height: 10px;
+        }
 
-<h1> <%= ownership %> pokemon. </h1>
-<p></p>
-<p><a href="<%= @unique_pokemon.pokemon.url%>"> <img src="<%= @unique_pokemon.pokemon.icon%>"> </a> </p>
-<p><img src="<%= @unique_pokemon.pokemon.first_type_image%>"> <img src="<%= @unique_pokemon.pokemon.second_type_image%>"> #<%= @unique_pokemon.pokemon.national_dex_num %></p>
-<p><h3><%= @unique_pokemon.pokemon.name%></h3> </p>
-<p><h3><%= @unique_pokemon.nickname%></h3> </p>
-<p><b> Abilities: </b> <%= @unique_pokemon.pokemon.abilities%> </p>
-<p> <b> HP: </b> <%= @unique_pokemon.pokemon.hp.to_i%> </p> 
-<b> Atk: </b> <%= @unique_pokemon.pokemon.atk.to_i%> </p> 
-<b> Def: </b> <%= @unique_pokemon.pokemon.defe.to_i%> </p> 
-<b> SpA: </b> <%= @unique_pokemon.pokemon.spa.to_i%> </p> 
-<b> SpD: </b> <%= @unique_pokemon.pokemon.spd.to_i%> </p> 
-<b> Spe: </b> <%= @unique_pokemon.pokemon.spe.to_i%> </p>
+        .atk_iv_bar {
+            display: inline;
+            width: <%= @unique_pokemon.atk_iv * 2%>px;
+            height: 10px;
+        }
+        .atk_base_bar {
+            display: inline;
+            width: <%= @unique_pokemon.pokemon.atk * 2%>px;
+            height: 10px;
+        }
+        .atk_ev_bar {
+            display: inline;
+            width: <%= (@unique_pokemon.atk_ev/4) * 2%>px;
+            height: 10px;
+        }
+
+        .defe_iv_bar {
+            display: inline;
+            width: <%= @unique_pokemon.defe_iv * 2%>px;
+            height: 10px;
+        }
+        .defe_base_bar {
+            display: inline;
+            width: <%= @unique_pokemon.pokemon.defe * 2%>px;
+            height: 10px;
+        }
+        .defe_ev_bar {
+            display: inline;
+            width: <%= (@unique_pokemon.defe_ev/4) * 2%>px;
+            height: 10px;
+        }
+
+        .spa_iv_bar {
+            display: inline;
+            width: <%= @unique_pokemon.spa_iv * 2%>px;
+            height: 10px;
+        }
+        .spa_base_bar {
+            display: inline;
+            width: <%= @unique_pokemon.pokemon.spa * 2%>px;
+            height: 10px;
+        }
+        .spa_ev_bar {
+            display: inline;
+            width: <%= (@unique_pokemon.spa_ev/4) * 2%>px;
+            height: 10px;
+        }
+
+        .spd_iv_bar {
+            display: inline;
+            width: <%= @unique_pokemon.spd_iv * 2%>px;
+            height: 10px;
+        }
+        .spd_base_bar {
+            display: inline;
+            width: <%= @unique_pokemon.pokemon.spd * 2%>px;
+            height: 10px;
+        }
+        .spd_ev_bar {
+            display: inline;
+            width: <%= (@unique_pokemon.spd_ev/4) * 2%>px;
+            height: 10px;
+        }
+
+        .spe_iv_bar {
+            display: inline;
+            width: <%= @unique_pokemon.spe_iv * 2%>px;
+            height: 10px;
+        }
+        .spe_base_bar {
+            display: inline;
+            width: <%= @unique_pokemon.pokemon.spe * 2%>px;
+            height: 10px;
+        }
+        .spe_ev_bar {
+            display: inline;
+            width: <%= (@unique_pokemon.spe_ev/4) * 2%>px;
+            height: 10px;
+        }
+    </style>
+</head>
+<body>
+  <% ownership = "" %>
+  <% if @unique_pokemon.user_id == nil %>
+    <% ownership = "A wild" %>
+  <%elsif @unique_pokemon.user_id == current_user.id %>
+    <% ownership = "Your" %>
+  <% else %>
+    <% ownership = "#{@unique_pokemon.user.name}'s"%>
+  <% end %>
+
+  <h1> <%= ownership %> pokemon. </h1>
+  <p></p>
+  <p><a href="<%= @unique_pokemon.pokemon.url%>"> <img src="<%= @unique_pokemon.pokemon.icon%>"> </a> </p>
+  <p><img src="<%= @unique_pokemon.pokemon.first_type_image%>"> <img src="<%= @unique_pokemon.pokemon.second_type_image%>"> #<%= @unique_pokemon.pokemon.national_dex_num %></p>
+  <p><h3><%= @unique_pokemon.pokemon.name%></h3> </p>
+  <p><h3><%= @unique_pokemon.nickname%></h3> </p>
+  <p><b> Abilities: </b> <%= @unique_pokemon.pokemon.abilities%> </p>
+
+  <div class="row">
+    <div class="col-sm-1" style="text-align:right;">
+      HP:
+      <b><%= @unique_pokemon.pokemon.hp.to_i + @unique_pokemon.hp_ev/4%></b>
+    </div>
+    <div class="col-sm-4">
+      <%# REPLACE THIS WITH THE FINAL STAT CALCULATION%>
+      <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="hp_iv_bar"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="hp_base_bar"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="hp_ev_bar">
+    </div>
+    <div class="col-sm-1">
+      <b>EV: </b> <%= @unique_pokemon.hp_ev%>
+    </div>
+    <div class="col-sm-1">
+      <b>IV: </b> <%= @unique_pokemon.hp_iv%>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-1" style="text-align:right;">
+      Atk:
+      <b><%= @unique_pokemon.pokemon.atk.to_i + @unique_pokemon.atk_ev/4%></b>
+    </div>
+    <div class="col-sm-4">
+      <%# REPLACE THIS WITH THE FINAL STAT CALCULATION%>
+      <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="atk_iv_bar"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="atk_base_bar"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="atk_ev_bar">
+    </div>
+    <div class="col-sm-1">
+      <b>EV: </b> <%= @unique_pokemon.atk_ev%>
+    </div>
+    <div class="col-sm-1">
+      <b>IV: </b> <%= @unique_pokemon.atk_iv%>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-1" style="text-align:right;">
+      Def:
+      <b><%= @unique_pokemon.pokemon.defe.to_i + @unique_pokemon.defe_ev/4%></b>
+    </div>
+    <div class="col-sm-4">
+      <%# REPLACE THIS WITH THE FINAL STAT CALCULATION%>
+      <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="defe_iv_bar"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="defe_base_bar"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="defe_ev_bar">
+    </div>
+    <div class="col-sm-1">
+      <b>EV: </b> <%= @unique_pokemon.defe_ev%>
+    </div>
+    <div class="col-sm-1">
+      <b>IV: </b> <%= @unique_pokemon.defe_iv%>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-1" style="text-align:right;">
+      SpA:
+      <b><%= @unique_pokemon.pokemon.spa.to_i + @unique_pokemon.spa_ev/4%></b>
+    </div>
+    <div class="col-sm-4">
+      <%# REPLACE THIS WITH THE FINAL STAT CALCULATION%>
+      <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spa_iv_bar"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spa_base_bar"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spa_ev_bar">
+    </div>
+    <div class="col-sm-1">
+      <b>EV: </b> <%= @unique_pokemon.spa_ev%>
+    </div>
+    <div class="col-sm-1">
+      <b>IV: </b> <%= @unique_pokemon.spa_iv%>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-1" style="text-align:right;">
+      SpD:
+      <b><%= @unique_pokemon.pokemon.spd.to_i + @unique_pokemon.spd_ev/4%></b>
+    </div>
+    <div class="col-sm-4">
+      <%# REPLACE THIS WITH THE FINAL STAT CALCULATION%>
+      <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spd_iv_bar"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spd_base_bar"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spd_ev_bar">
+    </div>
+    <div class="col-sm-1">
+      <b>EV: </b> <%= @unique_pokemon.spd_ev%>
+    </div>
+    <div class="col-sm-1">
+      <b>IV: </b> <%= @unique_pokemon.spd_iv%>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-1" style="text-align:right;">
+      Spe:
+      <b><%= @unique_pokemon.pokemon.spe.to_i + @unique_pokemon.spe_ev/4%></b>
+    </div>
+    <div class="col-sm-4">
+      <%# REPLACE THIS WITH THE FINAL STAT CALCULATION%>
+      <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spe_iv_bar"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spe_base_bar"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spe_ev_bar">
+    </div>
+    <div class="col-sm-1">
+      <b>EV: </b> <%= @unique_pokemon.spe_ev%>
+    </div>
+    <div class="col-sm-1">
+      <b>IV: </b> <%= @unique_pokemon.spe_iv%>
+    </div>
+  </div>
+</body>
