--- a/app/views/unique_pokemons/show.html.erb
+++ b/app/views/unique_pokemons/show.html.erb
@@ -108,7 +108,8 @@
     <% ownership = "#{@unique_pokemon.user.name}'s"%>
   <% end %>
 
-  <h1> <%= ownership %> pokemon. </h1>
+  <%= link_to "back to your pokemon", "/unique_pokemons" %>
+  <h1> <%= ownership %> pokemon </h1>
   <p></p>
   <p><a href="<%= @unique_pokemon.pokemon.url%>"> <img src="<%= @unique_pokemon.pokemon.icon%>"> </a> </p>
   <p><img src="<%= @unique_pokemon.pokemon.first_type_image%>"> <img src="<%= @unique_pokemon.pokemon.second_type_image%>"> #<%= @unique_pokemon.pokemon.national_dex_num %></p>
