removed ' - 1' from length parameter for pokemons and unique_pokemons index because it wasn't printing the last pokemon

--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -2,10 +2,10 @@
 <h1> Hello pokemon </h1>
 <% index = 0 %>
 <ul>
-  <% while index < @pokemons.length - 1%>
+  <% while index < @pokemons.length%>
       <div class="row">
         <% triple = 0 %>
-        <% while triple < 3 && index < @pokemons.length - 1%>
+        <% while triple < 3 && index < @pokemons.length%>
           <div class="col-sm-4">
             <div class="card">
               <div class="card-body">
