--- a/app/views/unique_pokemons/index.html.erb
+++ b/app/views/unique_pokemons/index.html.erb
@@ -3,10 +3,10 @@
 
 <% index = 0 %>
 <ul>
-  <% while index < @unique_pokemons.length - 1%>
+  <% while index < @unique_pokemons.length%>
       <div class="row">
         <% triple = 0 %>
-        <% while triple < 3 && index < @unique_pokemons.length - 1%>
+        <% while triple < 3 && index < @unique_pokemons.length%>
           <div class="col-sm-4">
             <div class="card">
               <div class="card-body">
