--- a/app/views/unique_pokemons/show.html.erb
+++ b/app/views/unique_pokemons/show.html.erb
@@ -119,100 +119,137 @@
 
   <div class="row">
     <div class="col-sm-1" style="text-align:right;">
+      <i> Base </i>
+    </div>
+    <div class="col-sm-7">
+    </div>
+    <div class="col-sm-1">
+      <b>EV: </b>
+    </div>
+    <div class="col-sm-1">
+      <b>IV: </b>
+    </div>
+    <div class="col-sm-1">
+      <i> Stat: </i>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-1" style="text-align:right;">
       HP:
-      <b><%= @unique_pokemon.pokemon.hp.to_i + @unique_pokemon.hp_iv + @unique_pokemon.hp_ev/4%></b>
+      <b><%= @unique_pokemon.pokemon.hp.to_i%></b>
     </div>
     <div class="col-sm-7">
       <%# REPLACE THIS WITH THE FINAL STAT CALCULATION%>
       <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="hp_iv_bar"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="hp_base_bar"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="hp_ev_bar">
     </div>
     <div class="col-sm-1">
-      <b>EV: </b> <%= @unique_pokemon.hp_ev%>
+      <%= @unique_pokemon.hp_ev%>
     </div>
     <div class="col-sm-1">
-      <b>IV: </b> <%= @unique_pokemon.hp_iv%>
+      <%= @unique_pokemon.hp_iv%>
+    </div>
+        <div class="col-sm-1">
+      <b><%= @unique_pokemon.pokemon.hp.to_i + @unique_pokemon.hp_iv + @unique_pokemon.hp_ev/4%></b>
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-1" style="text-align:right;">
       Atk:
-      <b><%= @unique_pokemon.pokemon.atk.to_i + @unique_pokemon.atk_iv + @unique_pokemon.atk_ev/4%></b>
+      <b><%= @unique_pokemon.pokemon.atk.to_i%></b>
     </div>
     <div class="col-sm-7">
       <%# REPLACE THIS WITH THE FINAL STAT CALCULATION%>
       <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="atk_iv_bar"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="atk_base_bar"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="atk_ev_bar">
     </div>
     <div class="col-sm-1">
-      <b>EV: </b> <%= @unique_pokemon.atk_ev%>
+      <%= @unique_pokemon.atk_ev%>
     </div>
     <div class="col-sm-1">
-      <b>IV: </b> <%= @unique_pokemon.atk_iv%>
+      <%= @unique_pokemon.atk_iv%>
+    </div>
+    <div class="col-sm-1">
+      <b><%= @unique_pokemon.pokemon.atk.to_i + @unique_pokemon.atk_iv + @unique_pokemon.atk_ev/4%></b>
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-1" style="text-align:right;">
       Def:
-      <b><%= @unique_pokemon.pokemon.defe.to_i + @unique_pokemon.defe_iv + @unique_pokemon.defe_ev/4%></b>
+      <b><%= @unique_pokemon.pokemon.defe.to_i%></b>
     </div>
     <div class="col-sm-7">
       <%# REPLACE THIS WITH THE FINAL STAT CALCULATION%>
       <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="defe_iv_bar"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="defe_base_bar"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="defe_ev_bar">
     </div>
     <div class="col-sm-1">
-      <b>EV: </b> <%= @unique_pokemon.defe_ev%>
+      <%= @unique_pokemon.defe_ev%>
     </div>
     <div class="col-sm-1">
-      <b>IV: </b> <%= @unique_pokemon.defe_iv%>
+      <%= @unique_pokemon.defe_iv%>
+    </div>
+    <div class="col-sm-1">
+      <b><%= @unique_pokemon.pokemon.defe.to_i + @unique_pokemon.defe_iv + @unique_pokemon.defe_ev/4%></b>
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-1" style="text-align:right;">
       SpA:
-      <b><%= @unique_pokemon.pokemon.spa.to_i + @unique_pokemon.spa_iv + @unique_pokemon.spa_ev/4%></b>
+      <b><%= @unique_pokemon.pokemon.spa.to_i%></b>
     </div>
     <div class="col-sm-7">
       <%# REPLACE THIS WITH THE FINAL STAT CALCULATION%>
       <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spa_iv_bar"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spa_base_bar"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spa_ev_bar">
     </div>
     <div class="col-sm-1">
-      <b>EV: </b> <%= @unique_pokemon.spa_ev%>
+      <%= @unique_pokemon.spa_ev%>
     </div>
     <div class="col-sm-1">
-      <b>IV: </b> <%= @unique_pokemon.spa_iv%>
+      <%= @unique_pokemon.spa_iv%>
+    </div>
+    <div class="col-sm-1">
+      <b><%= @unique_pokemon.pokemon.spa.to_i + @unique_pokemon.spa_iv + @unique_pokemon.spa_ev/4%></b>
     </div>
   </div>
+
   <div class="row">
     <div class="col-sm-1" style="text-align:right;">
       SpD:
-      <b><%= @unique_pokemon.pokemon.spd.to_i + @unique_pokemon.spd_iv + @unique_pokemon.spd_ev/4%></b>
+      <b><%= @unique_pokemon.pokemon.spd.to_i%></b>
     </div>
     <div class="col-sm-7">
       <%# REPLACE THIS WITH THE FINAL STAT CALCULATION%>
       <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spd_iv_bar"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spd_base_bar"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spd_ev_bar">
     </div>
     <div class="col-sm-1">
-      <b>EV: </b> <%= @unique_pokemon.spd_ev%>
+      <%= @unique_pokemon.spd_ev%>
     </div>
     <div class="col-sm-1">
-      <b>IV: </b> <%= @unique_pokemon.spd_iv%>
+      <%= @unique_pokemon.spd_iv%>
+    </div>
+    <div class="col-sm-1">
+      <b><%= @unique_pokemon.pokemon.spd.to_i + @unique_pokemon.spd_iv + @unique_pokemon.spd_ev/4%></b>
     </div>
   </div>
+
   <div class="row">
     <div class="col-sm-1" style="text-align:right;">
       Spe:
-      <b><%= @unique_pokemon.pokemon.spe.to_i + @unique_pokemon.spe_iv + @unique_pokemon.spe_ev/4%></b>
+      <b><%= @unique_pokemon.pokemon.spe.to_i%></b>
     </div>
     <div class="col-sm-7">
       <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spe_iv_bar"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spe_base_bar"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spe_ev_bar">
     </div>
     <div class="col-sm-1">
-      <b>EV: </b> <%= @unique_pokemon.spe_ev%>
+      <%= @unique_pokemon.spe_ev%>
     </div>
     <div class="col-sm-1">
-      <b>IV: </b> <%= @unique_pokemon.spe_iv%>
+      <%= @unique_pokemon.spe_iv%>
+    </div>
+    <div class="col-sm-1">
+      <b><%= @unique_pokemon.pokemon.spe.to_i + @unique_pokemon.spe_iv + @unique_pokemon.spe_ev/4%></b>
     </div>
   </div>
 </body>
