--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -25,48 +25,48 @@
                 <p class="card=text"><img src="<%= @pokemons[index].first_type_image%>"> <img src="<%= @pokemons[index].second_type_image%>"> #<%= @pokemons[index].national_dex_num %></p>
                 <p class="card=text"><b> Abilities: </b> <%= @pokemons[index].abilities%> </p>
                 <div class="row">  
-                    <div class="col-sm-3">
-                      <b> HP: </b> <%= @pokemons[index].hp.to_i%> 
+                    <div class="col-sm-3" style="text-align:right;">
+                      HP: <b> <%= @pokemons[index].hp.to_i%> </b>
                     </div>
                     <div class="col-sm-9">
                       <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="base_bar" width=<%= @pokemons[index].hp.to_i%>>
                     </div>
                 </div> 
                 <div class="row">  
-                    <div class="col-sm-3">
-                      <b> Atk: </b> <%= @pokemons[index].atk.to_i%> 
+                    <div class="col-sm-3" style="text-align:right;">
+                      Atk: <b> <%= @pokemons[index].atk.to_i%> </b>
                     </div>
                     <div class="col-sm-9">
                       <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="base_bar" width=<%= @pokemons[index].atk.to_i%>>
                     </div>
                 </div> 
                 <div class="row">  
-                    <div class="col-sm-3">
-                      <b> Def: </b> <%= @pokemons[index].defe.to_i%> 
+                    <div class="col-sm-3" style="text-align:right;">
+                      Def: <b> <%= @pokemons[index].defe.to_i%> </b>
                     </div>
                     <div class="col-sm-9">
                       <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="base_bar" width=<%= @pokemons[index].defe.to_i%>>
                     </div>
                 </div> 
                 <div class="row">  
-                    <div class="col-sm-3">
-                      <b> SpA: </b> <%= @pokemons[index].spa.to_i%> 
+                    <div class="col-sm-3" style="text-align:right;">
+                      SpA: <b> <%= @pokemons[index].spa.to_i%> </b>
                     </div>
                     <div class="col-sm-9">
                       <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="base_bar" width=<%= @pokemons[index].spa.to_i%>>
                     </div>
                 </div> 
                 <div class="row">  
-                    <div class="col-sm-3">
-                      <b> SpD: </b> <%= @pokemons[index].spd.to_i%> 
+                    <div class="col-sm-3" style="text-align:right;">
+                      SpD: <b> <%= @pokemons[index].spd.to_i%> </b>
                     </div>
                     <div class="col-sm-9">
                       <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="base_bar" width=<%= @pokemons[index].spd.to_i%>>
                     </div>
                 </div> 
                 <div class="row">  
-                    <div class="col-sm-3">
-                      <b> Spe: </b> <%= @pokemons[index].spe.to_i%> 
+                    <div class="col-sm-3" style="text-align:right;">
+                      Spe: <b> <%= @pokemons[index].spe.to_i%> </b>
                     </div>
                     <div class="col-sm-9">
                       <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="base_bar" width=<%= @pokemons[index].spe.to_i%>>
