removed users_id from UniquePokemon. Changed the following to match: unique_pokemons_controller create action, unique_pokemons_controller_test create action, unique_pokemons show.html.erb. Changed relations for UniquePokemon to no longer has_many belongs_to User, user now has_many UniquePokemon through Trainer

--- a/app/views/unique_pokemons/show.html.erb
+++ b/app/views/unique_pokemons/show.html.erb
@@ -100,9 +100,9 @@
 </head>
 <body>
   <% ownership = "" %>
-  <% if @unique_pokemon.user_id == nil %>
+  <% if @unique_pokemon.trainer == nil %>
     <% ownership = "A wild" %>
-  <%elsif @unique_pokemon.user_id == current_user.id %>
+  <%elsif @unique_pokemon.trainer.user_id == current_user.id %>
     <% ownership = "Your" %>
   <% else %>
     <% ownership = "#{@unique_pokemon.user.name}'s"%>
