added trainers to navbar, changed pokemon system_test to test trainers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/unique_pokemons">Your Pokemon</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/trainers">Your Trainers</a>
+          </li>
           <% if current_user %>
             <li class="nav-item">
               <a class="nav-link disabled"> Logged in as <%= current_user.name %></a>
