changed trainers_controller update action to full stack. created edit.html.erb. added edit button to trainers show.html.erb

--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -16,6 +16,9 @@
           <p class="card=text"><b> Title: </b> <%= @trainer.title%> </p>
           <p class="card=text"><b> Level: </b> <%= @trainer.level%> </p>
           <p class="card=text"><b> Experience: </b> <%= @trainer.experience%> </p>
+          <p class="card=text"></p>
+
+          <%= link_to "Edit Trainer", edit_trainer_path(@trainer) %>
         </div>
       </div>
     </div>
