added feature to change user's current_trainer id. Changed unique_pokemons show.html to only show the pokemon belonging to the current trainer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
           <% if current_user %>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                My Account
+                <%= Trainer.find_by(id: User.last.current_trainer_id).title %> <%= Trainer.find_by(id: User.last.current_trainer_id).name %>
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
