--- a/app/views/unique_pokemons/index.html.erb
+++ b/app/views/unique_pokemons/index.html.erb
@@ -16,73 +16,73 @@
 
 <% index = 0 %>
   <ul>
-    <% while index < @unique_pokemons.length%>
+    <% while index < Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons.length%>
         <div class="row">
           <% double = 0 %>
-          <% while double < 2 && index < @unique_pokemons.length%>
+          <% while double < 2 && index < Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons.length%>
             <div class="col-sm-5">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title"><%= @unique_pokemons[index].pokemon.name%></h5>
-                  <p class="card=text"><a href="<%= @unique_pokemons[index].pokemon.url%>"> <img src="<%= @unique_pokemons[index].pokemon.icon %>"> </a> </p>
-                  <p class="card=text"><img src="<%= @unique_pokemons[index].pokemon.first_type_image%>"> <img src="<%= @unique_pokemons[index].pokemon.second_type_image%>"> #<%= @unique_pokemons[index].pokemon.national_dex_num %></p>
-                  <p><b>Nickname: </b><%= @unique_pokemons[index].nickname%></p>
-                  <p class="card=text"><b> Abilities: </b> <%= @unique_pokemons[index].pokemon.abilities%> </p>
+                  <h5 class="card-title"><%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.name%></h5>
+                  <p class="card=text"><a href="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.url%>"> <img src="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.icon %>"> </a> </p>
+                  <p class="card=text"><img src="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.first_type_image%>"> <img src="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.second_type_image%>"> #<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.national_dex_num %></p>
+                  <p><b>Nickname: </b><%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].nickname%></p>
+                  <p class="card=text"><b> Abilities: </b> <%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.abilities%> </p>
                   <div class="row">  
                       <div class="col-sm-3" style="text-align:right;">
-                        HP: <b> <%= @unique_pokemons[index].pokemon.hp.to_i + @unique_pokemons[index].hp_iv + @unique_pokemons[index].hp_ev/4%> </b>
+                        HP: <b> <%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.hp.to_i + Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].hp_iv + Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].hp_ev/4%> </b>
                       </div>
                       <div class="col-sm-9">
-                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="hp_iv_bar" display="inline" width="<%= @unique_pokemons[index].hp_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="hp_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.hp.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="hp_ev_bar" display="inline" width="<%= (@unique_pokemons[index].hp_ev/4) * 1%>" height="10">
+                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="hp_iv_bar" display="inline" width="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].hp_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="hp_base_bar" display="inline" width="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.hp.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="hp_ev_bar" display="inline" width="<%= (Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].hp_ev/4) * 1%>" height="10">
                       </div>
                   </div>
                   <div class="row">   
                       <div class="col-sm-3" style="text-align:right;">
-                        Atk: <b> <%= @unique_pokemons[index].pokemon.atk.to_i + @unique_pokemons[index].atk_iv + @unique_pokemons[index].atk_ev/4%> </b> 
+                        Atk: <b> <%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.atk.to_i + Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].atk_iv + Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].atk_ev/4%> </b> 
                       </div>
                       <div class="col-sm-9">
-                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="atk_iv_bar" display="inline" width="<%= @unique_pokemons[index].atk_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="atk_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.atk.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="atk_ev_bar" display="inline" width="<%= (@unique_pokemons[index].atk_ev/4) * 1%>" height="10">
+                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="atk_iv_bar" display="inline" width="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].atk_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="atk_base_bar" display="inline" width="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.atk.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="atk_ev_bar" display="inline" width="<%= (Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].atk_ev/4) * 1%>" height="10">
                       </div>
                   </div>
 
                   <div class="row">  
                       <div class="col-sm-3" style="text-align:right;">
-                        Def: <b> <%= @unique_pokemons[index].pokemon.defe.to_i + @unique_pokemons[index].defe_iv + @unique_pokemons[index].defe_ev/4%> </b>
+                        Def: <b> <%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.defe.to_i + Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].defe_iv + Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].defe_ev/4%> </b>
                       </div>
                       <div class="col-sm-9">
-                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="defe_iv_bar" display="inline" width="<%= @unique_pokemons[index].defe_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="defe_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.defe.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="defe_ev_bar" display="inline" width="<%= (@unique_pokemons[index].defe_ev/4) * 1%>" height="10">
+                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="defe_iv_bar" display="inline" width="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].defe_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="defe_base_bar" display="inline" width="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.defe.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="defe_ev_bar" display="inline" width="<%= (Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].defe_ev/4) * 1%>" height="10">
                       </div>
                   </div>
 
                   <div class="row">  
                       <div class="col-sm-3" style="text-align:right;">
-                        SpA: <b> <%= @unique_pokemons[index].pokemon.spa.to_i + @unique_pokemons[index].spa_iv + @unique_pokemons[index].spa_ev/4%> </b>
+                        SpA: <b> <%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.spa.to_i + Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].spa_iv + Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].spa_ev/4%> </b>
                       </div>
                       <div class="col-sm-9">
-                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spa_iv_bar" display="inline" width="<%= @unique_pokemons[index].spa_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spa_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.spa.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spa_ev_bar" display="inline" width="<%= (@unique_pokemons[index].spa_ev/4) * 1%>" height="10">
+                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spa_iv_bar" display="inline" width="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].spa_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spa_base_bar" display="inline" width="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.spa.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spa_ev_bar" display="inline" width="<%= (Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].spa_ev/4) * 1%>" height="10">
                       </div>
                   </div>
 
                   <div class="row">  
                       <div class="col-sm-3" style="text-align:right;">
-                        SpD: <b> <%= @unique_pokemons[index].pokemon.spd.to_i + @unique_pokemons[index].spd_iv + @unique_pokemons[index].spd_ev/4%> </b>
+                        SpD: <b> <%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.spd.to_i + Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].spd_iv + Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].spd_ev/4%> </b>
                       </div>
                       <div class="col-sm-9">
-                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spd_iv_bar" display="inline" width="<%= @unique_pokemons[index].spd_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spd_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.spd.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spd_ev_bar" display="inline" width="<%= (@unique_pokemons[index].spd_ev/4) * 1%>" height="10">
+                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spd_iv_bar" display="inline" width="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].spd_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spd_base_bar" display="inline" width="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.spd.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spd_ev_bar" display="inline" width="<%= (Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].spd_ev/4) * 1%>" height="10">
                       </div>
                   </div>
 
                   <div class="row">  
                       <div class="col-sm-3" style="text-align:right;">
-                        Spe: <b><%= @unique_pokemons[index].pokemon.spe.to_i + @unique_pokemons[index].spe_iv + @unique_pokemons[index].spe_ev/4%> </b>
+                        Spe: <b><%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.spe.to_i + Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].spe_iv + Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].spe_ev/4%> </b>
                       </div>
                       <div class="col-sm-9">
-                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spe_iv_bar" display="inline" width="<%= @unique_pokemons[index].spe_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spe_base_bar" display="inline" width="<%= @unique_pokemons[index].pokemon.spe.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spe_ev_bar" display="inline" width="<%= (@unique_pokemons[index].spe_ev/4) * 1%>" height="10">
+                        <img src="https://htmlcolorcodes.com/assets/images/colors/bright-orange-color-solid-background-1920x1080.png" class="spe_iv_bar" display="inline" width="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].spe_iv * 1%>" height="10"><img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Flag_of_Libya_%281977%E2%80%932011%2C_2-3%29.svg" class="spe_base_bar" display="inline" width="<%= Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].pokemon.spe.to_i * 1%>" height="10"><img src="https://htmlcolorcodes.com/assets/images/colors/baby-blue-color-solid-background-1920x1080.png" class="spe_ev_bar" display="inline" width="<%= (Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index].spe_ev/4) * 1%>" height="10">
                       </div>
                   </div>
                   <p class="card=text"></p>
 
-                  <%= link_to "Go to page", @unique_pokemons[index] %>
+                  <%= link_to "Go to page", Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index] %>
                 </div>
               </div>
             </div>
