added destroy button to unique_pokemon index.html

--- a/app/views/unique_pokemons/index.html.erb
+++ b/app/views/unique_pokemons/index.html.erb
@@ -82,7 +82,7 @@
                   </div>
                   <p class="card=text"></p>
 
-                  <%= link_to "Go to page", Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index] %>
+                  <%= link_to "Go to page", Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index] %> <%= link_to "Destroy unique_pokemon", unique_pokemon_path(Trainer.find_by(id: current_user.current_trainer_id).unique_pokemons[index]), data: {turbo_method: :delete} %>
                 </div>
               </div>
             </div>
